<resources>
    <string name="app_name">Sharity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="Str_News_Btn">News</string>
    <string name="Str_History_Btn">My Request</string>
    <string name="Str_Profile_Btn">My Profile</string>
    <string name="Str_Request_Btn">New Request</string>
    <string name="Str_log_out_Btn">Log Out</string>
    <string name="Str_UserName">Name</string>
    <string name="Str_NewUser">New User?</string>
    <string name="Str_Logo">logo</string>
    <string name="Str_Home_Btn">Home</string>
    <string name="Str_Update_Btn">Save</string>
    <string name="Str_Profile_txt">My Profile</string>
    <string name="Str_Current_program">Current Program</string>
    <string name="Str_SignUp_txt">Sign Up</string>
    <string name="Str_Category_txt">Category</string>
    <string name="Str_Priority_txt">Priority</string>
    <string name="Str_Title_txt">Title</string>
    <string name="Str_Desc_txt">Description</string>
    <string name="Str_CreateReq_txt">Create</string>
    <string name="Str_ReqPage_txt">New Request</string>
    <string name="Str_sign_up_Btn">Sign Up</string>
    <string name="Str_sign_up_header">Sign Up for Sharity</string>
    <string name="profile_com_text">Mandatory profile completion</string>
    <string name="update_profile">Update credentials</string>
    <string name="Str_email_text">E-mail</string>
    <string name="Str_pwd_text">Set Password</string>
    <string name="Str_Re_pwd_text">Re-enter Password</string>
    <string name="btn_revoke_access">Revoke</string>
    <string name="Str_hint">Enter a Security Hint</string>
    <string name="Str_forgot_pwd">Forgot password?</string>
    <string name="Str_password">Password</string>
    <string name="Str_login_Btn">Login</string>
    <string name="securityhint">Security Hint</string>
    <string name="forgetpassword">Forget Password!</string>
    <string name="entersecurityhint">Enter your Security Hint here</string>
    <string name="Str_email_hint">Enter your Email ID here</string>
    <string name="your_password">Your Password will appear here</string>
    <string name="register">Register</string>
    <string name="getpassword">Get Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="showpassword">Show Password</string>
    <string name="enterpassword">Enter Password</string>
    <string name="add">ADD</string>
    <string name="accountpassword">ACCOUNT PASSWORD</string>
    <string name="addphoto">Select Account Picture</string>
    <string name="delete">DELETE</string>
    <string name="accountname">Account Name</string>
    <string name="email">Email</string>

    <string-array name="navigation_drawer_items_array">
        <item>New Request</item>
        <item>History</item>
        <item>Edit profile</item>
        <item>Home</item>
        <item>Logout</item>
    </string-array>

    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

</resources>
