<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_style"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/header_main"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="@string/entersecurityhint"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/securityhint_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="18dp"
                android:padding="5dp"
                android:background="@drawable/field_layout"
                android:ems="10"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="text">
            </EditText>

            <TextView
                android:id="@+id/header_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/email_hint"
                android:text="@string/your_password"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <TextView
                android:id="@+id/get_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_pass"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:inputType="text" />

            <TextView
                android:id="@+id/email_headerStr"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="@string/Str_email_hint"
                android:layout_below="@+id/securityhint_edt"
                android:layout_toEndOf="@+id/get_pwd"
                android:layout_marginTop="15dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />

            <EditText
                android:id="@+id/email_hint"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="5dp"
                android:background="@drawable/field_layout"
                android:ems="10"
                android:layout_below="@+id/email_headerStr"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textEmailAddress" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout1"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp">

        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/getpassword_btn"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_style"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/getpassword"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_style"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/cancel"
        android:layout_marginRight="16dp"
        android:layout_alignTop="@+id/getpassword_btn"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

</RelativeLayout>