<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sharity.itu.sharity.MainActivity"
    android:background="@color/colorPrimaryDark"
    android:focusableInTouchMode="false"
    android:focusable="false"
    android:id="@+id/homePage"
    android:nestedScrollingEnabled="false"
    android:textAlignment="center"
    android:clickable="false">

    <Button
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:text="@string/Str_log_out_Btn"
        android:id="@+id/logoutBtn"
        android:typeface="normal"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:contextClickable="false"
        android:enabled="true"
        android:focusable="true"
        android:clickable="true"
        android:elegantTextHeight="true"
        android:textStyle="normal"
        android:focusableInTouchMode="true"
        android:textAllCaps="false"
        android:layout_below="@+id/image1"
        android:layout_alignRight="@+id/image1"
        android:layout_alignEnd="@+id/image1"
        android:visibility="visible" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:id="@+id/image1"
        android:src="@drawable/img"
        android:contentDescription="@string/Str_Logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:minWidth="220dp"
        android:textStyle="normal|bold"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:textColor="@android:color/white"
        android:typeface="normal"
        android:width="@dimen/sharity_text_w"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@android:string/unknownName"
        android:visibility="visible"
        android:layout_above="@+id/newsBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="Name"
        android:textColorHint="@android:color/white" />


    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/Str_News_Btn"
        android:id="@+id/newsBtn"
        android:background="@drawable/rounded_btn"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        android:typeface="normal"
        android:visibility="visible"
        android:enabled="true"
        android:focusable="false"
        android:minHeight="@dimen/home_btn_h"
        android:textSize="25sp"
        android:clickable="true"
        android:ellipsize="end"
        android:elegantTextHeight="true"
        android:longClickable="false"
        android:outlineProvider="background"
        android:shadowColor="@color/switch_thumb_normal_material_dark"
        android:focusableInTouchMode="true"
        android:textAllCaps="false"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/logoutBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:contextClickable="true" />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/Str_Profile_Btn"
        android:id="@+id/profileBtn"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        android:typeface="normal"
        android:visibility="visible"
        android:enabled="true"
        android:focusable="false"
        android:minHeight="@dimen/home_btn_h"
        android:textSize="25sp"
        android:clickable="true"
        android:contextClickable="true"
        android:ellipsize="end"
        android:elegantTextHeight="true"
        android:longClickable="false"
        android:outlineProvider="background"
        android:shadowColor="@color/switch_thumb_normal_material_dark"
        android:focusableInTouchMode="true"
        android:textAllCaps="false"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp" />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/Str_Request_Btn"
        android:id="@+id/requestBtn"
        android:background="@drawable/rounded_btn"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        android:typeface="normal"
        android:visibility="visible"
        android:enabled="true"
        android:focusable="false"
        android:minHeight="@dimen/home_btn_h"
        android:textSize="25sp"
        android:clickable="true"
        android:contextClickable="true"
        android:ellipsize="end"
        android:elegantTextHeight="true"
        android:longClickable="false"
        android:outlineProvider="background"
        android:shadowColor="@color/switch_thumb_normal_material_dark"
        android:focusableInTouchMode="true"
        android:textAllCaps="false"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/profileBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp" />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/Str_History_Btn"
        android:id="@+id/historyBtn"
        android:background="@drawable/rounded_btn"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="normal"
        android:typeface="normal"
        android:visibility="visible"
        android:enabled="true"
        android:focusable="false"
        android:minHeight="@dimen/home_btn_h"
        android:textSize="25sp"
        android:clickable="true"
        android:contextClickable="true"
        android:ellipsize="end"
        android:elegantTextHeight="true"
        android:longClickable="false"
        android:outlineProvider="background"
        android:shadowColor="@color/switch_thumb_normal_material_dark"
        android:focusableInTouchMode="true"
        android:textAllCaps="false"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/requestBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp" />

</RelativeLayout>
