<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sharity.itu.sharity.MainActivity"
    android:background="@color/colorPrimaryDark"
    android:focusableInTouchMode="false"
    android:focusable="false"
    android:id="@+id/homePage"
    android:nestedScrollingEnabled="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image1"
        android:src="@drawable/img_old"
        android:contentDescription="@string/Str_Logo"
        android:layout_marginTop="125dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:cropToPadding="false" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image1"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible">
    </com.google.android.gms.common.SignInButton>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Str_SignUp_txt"
        android:id="@+id/signUpBtn"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/image1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="77dp"
        android:layout_marginEnd="77dp"
        android:background="@android:color/transparent"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:ellipsize="end"
        android:elegantTextHeight="true"
        android:clickable="true"
        android:textColor="@android:color/white"
        android:minHeight="@dimen/abc_action_bar_progress_bar_size"
        android:minWidth="@dimen/login_Text_w"
        android:textStyle="normal|bold"
        android:textSize="@dimen/sharity_text_w"
        android:textAllCaps="false"
        android:typeface="normal"
        android:visibility="visible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"
        android:minHeight="@dimen/sharity_login_text_size"
        android:enabled="false"
        android:minWidth="@dimen/login_Text_w"
        android:text="@string/Str_NewUser"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:typeface="normal"
        android:textStyle="normal"
        android:background="@android:color/transparent"
        android:width="@dimen/sharity_text_w"
        android:elegantTextHeight="true"
        android:layout_alignBottom="@+id/signUpBtn"
        android:layout_toLeftOf="@+id/signUpBtn"
        android:layout_toStartOf="@+id/signUpBtn" />

</RelativeLayout>
