<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sharity.itu.sharity.MainActivity"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:focusable="false"
    android:id="@+id/homePage"
    android:nestedScrollingEnabled="false"
    android:textAlignment="center"
    android:clickable="true"
    android:contextClickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <EditText
            android:layout_width="210dp"
            android:layout_height="25dp"
            android:id="@+id/signUp_header"
            android:typeface="normal"
            android:background="@color/colorPrimaryDark"
            android:enabled="false"
            android:focusable="false"
            android:clickable="false"
            android:textStyle="normal|bold"
            android:focusableInTouchMode="false"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textSize="18sp"
            android:inputType="none"
            android:textAlignment="textStart"
            android:layout_marginTop="12dp"
            android:hint="Sign Up for Sharity"
            android:textColorHint="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="45dp" />
    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/SignUp_new_pwd"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:typeface="normal"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/field_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/pwd_header"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signUp_re_new_pwd"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:typeface="normal"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/field_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/re_pwd_header"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ems="10"
        android:id="@+id/signUp_email"
        android:enabled="true"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:typeface="normal"
        android:theme="@style/MyEditTextTheme"
        android:background="@drawable/field_layout"
        android:inputType="textEmailAddress"
        android:focusable="true"
        android:visibility="visible"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/email_header"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/email_header"
        android:minHeight="@dimen/sharity_request_text"
        android:enabled="false"
        android:focusable="false"
        android:minWidth="@dimen/login_Text_w"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:typeface="normal"
        android:textStyle="normal|bold"
        android:background="@android:color/transparent"
        android:elegantTextHeight="true"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:inputType="none"
        android:hint="@string/Str_email_text"
        android:textColorHint="@color/common_plus_signin_btn_text_dark_disabled"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/pwd_header"
        android:minHeight="@dimen/sharity_request_text"
        android:enabled="false"
        android:focusable="false"
        android:minWidth="@dimen/login_Text_w"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:typeface="normal"
        android:textStyle="normal|bold"
        android:background="@android:color/transparent"
        android:elegantTextHeight="true"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:inputType="none"
        android:hint="@string/Str_pwd_text"
        android:textColorHint="@color/common_plus_signin_btn_text_dark_disabled"
        android:layout_below="@+id/signUp_email"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/re_pwd_header"
        android:minHeight="@dimen/sharity_request_text"
        android:enabled="false"
        android:focusable="false"
        android:minWidth="@dimen/login_Text_w"
        android:textColor="@android:color/white"
        android:visibility="visible"
        android:typeface="normal"
        android:textStyle="normal|bold"
        android:background="@android:color/transparent"
        android:elegantTextHeight="true"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:inputType="none"
        android:hint="@string/Str_Re_pwd_text"
        android:textColorHint="@color/common_plus_signin_btn_text_dark_disabled"
        android:layout_below="@+id/SignUp_new_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="34dp"
        android:text="@string/Str_sign_up_Btn"
        android:id="@+id/create_acc"
        android:typeface="normal"
        android:background="@drawable/field_layout"
        android:textColor="@android:color/black"
        android:contextClickable="true"
        android:enabled="true"
        android:focusable="false"
        android:clickable="true"
        android:elegantTextHeight="true"
        android:textStyle="normal|bold"
        android:focusableInTouchMode="true"
        android:textAllCaps="true"
        android:visibility="visible"
        android:ellipsize="end"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/signUp_re_new_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />


</RelativeLayout>
